--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,7 @@
 
         <jacoco.version>0.8.7</jacoco.version>
         <!-- affects both m-compiler-p and m-javadoc-p-->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>8</maven.compiler.release>
         <!-- for reproducible builds (https://maven.apache.org/guides/mini/guide-reproducible-builds.html), automatically adjusted during release -->
         <project.build.outputTimestamp>1682083729</project.build.outputTimestamp>
     </properties>
@@ -368,19 +367,6 @@ Bundle-DocURL: https://adobe-consulting-services.github.io/acs-aem-commons/
                     <version>2.0.0</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>animal-sniffer-maven-plugin</artifactId>
-                    <version>1.20</version>
-                    <configuration>
-                        <failOnError>false</failOnError>
-                        <signature>
-                            <groupId>org.codehaus.mojo.signature</groupId>
-                            <artifactId>java18</artifactId>
-                            <version>1.0</version>
-                        </signature>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>3.0.0</version>
@@ -440,7 +426,7 @@ Bundle-DocURL: https://adobe-consulting-services.github.io/acs-aem-commons/
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>enforce-maven</id>
+                        <id>enforce-maven-and-java</id>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
@@ -449,6 +435,9 @@ Bundle-DocURL: https://adobe-consulting-services.github.io/acs-aem-commons/
                                 <requireMavenVersion>
                                     <version>3.5.4</version><!-- license-maven-plugin 2.0.0 requires 3.5.4 -->
                                 </requireMavenVersion>
+                                <requireJavaVersion>
+                                    <version>11</version>
+                                </requireJavaVersion>
                             </rules>
                         </configuration>
                     </execution>
@@ -700,23 +689,6 @@ Bundle-DocURL: https://adobe-consulting-services.github.io/acs-aem-commons/
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <!-- profile for settings when running on Java8 -->
-        <profile>
-            <id>java8</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <configuration>
-                            <additionalJOption>-Xdoclint:none</additionalJOption>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
